fix(backend): outgoing mail rendered nondeterministically; a rule under text is no longer a heading (#268)
* fix(backend): a rule under a line of text no longer makes it a heading

CommonMark reads `---` (or `===`) under a paragraph as a heading underline,
so an ordinary signature — a name with a rule beneath it — went out as a
level-two heading that had swallowed both the RFC 3676 separator and the
sender's name. Being formatting, it also switched a message the user wrote
as plain text into multipart/alternative. A rule in a signature is a common
thing to write.

text/plain was always correct; only the HTML alternative was wrong.

Setext headings now demote back to paragraphs, keeping the underline as
literal text — the two parts of a message must say the same thing, and the
dashes are in what the user typed. ATX headings are untouched: same
reasoning that keeps indented code blocks off and fenced ones on, in that
formatting in a mail should be an explicit gesture, and `# Title` is one
while a line of dashes under a name is not.

The two cannot be separated through enabledBlockTypes — CommonMark has a
single Heading class for both — but they differ in the source: ATX is
always one line, setext spans its text plus the underline. Hence
includeSourceSpans and the span count as the discriminator; comparing trees
with and without spans confirmed they do not affect parsing itself.

Verified in the failing direction: with the demotion disabled, five tests
covering setext fail, while ATX headings and a standalone `---` thematic
break keep passing.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* fix(backend): outgoing mail rendered nondeterministically; a rule under text is no longer a heading

Two defects, one root.

ENABLED_BLOCKS was a Set.of. CommonMark registers block parsers in
iteration order, and for a rule under a paragraph whichever claims the line
first wins: heading first reads it as a setext underline, thematic break
first reads it as a rule. Set.of r